...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Games List" id="1iY-av-n8O">
                        <barButtonItem key="leftBarButtonItem" id="2TH-yN-wX9">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="P3w-Br-9Qo">
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Tags" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hhh-fq-QHP">
                                                    <rect key="frame" x="8" y="11" width="72" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Add New Game" id="izJ-za-wMB">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Ug8-rU-VTE">
                            <connections>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Select Opponent Class" id="ws5-mK-Ujb"/>
                    <connections>
                        <outlet property="opponentClasses" destination="GSS-kA-VSX" id="KyU-fC-aNl"/>
...
        <scene sceneID="vrt-wz-6Fj">
            <objects>
                <tableViewController title="Settings" id="qku-hA-dAJ" customClass="Settings" customModule="Deck_Tracker" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="0Rp-vw-pXK">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g9V-hy-MFP">
                                                    <rect key="frame" x="8" y="7" width="60" height="30"/>
                                                    <state key="normal" title="Reset All"/>
                                                    <connections>
                                                        <action selector="resetButtonPressed:" destination="qku-hA-dAJ" eventType="touchUpInside" id="mIJ-If-UWt"/>
...
                                </cells>
                            </tableViewSection>
                            <tableViewSection headerTitle="About" id="GtU-Ox-wzK">
                                <cells>
                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Un5-7w-eBu" userLabel="About">
...
